fixes z-index styles

--- a/styles/components/homepage/homepage.scss
+++ b/styles/components/homepage/homepage.scss
@@ -87,6 +87,8 @@
   }
 
   .newsletter {
+    position: relative;
+    z-index: 2;
     height: 160px;
     width: 100%;
     background-color: $white;
